# Khronos.jl

./: .gitignore  CONTRIBUTING.md  LICENSE  Project.toml  README.md
benchmark/: README.md  benchmark_metrics.jl  benchmark_utils.jl  dipole.jl  dipole.yml  (+20 more)
python/: pyproject.toml
python/examples/: grating_coupler.jl  grating_coupler.py
python/examples/grating_coupler_output/: gc_te1550_results.csv
python/khronos/: __init__.py  _bridge.py  _sysimage.py
python/khronos/julia_src/: Project.toml  __init__.py
python/khronos/julia_src/precompile/: workload.jl
python/khronos/julia_src/src/: Boundaries.jl  Chunking.jl  DataStructures.jl  GDS.jl  Geometry.jl  Mode.jl  Simulation.jl  utils.jl
python/khronos/julia_src/src/Adjoint/: Adjoint.jl  FilteredSource.jl  Filters.jl  GradientKernel.jl  ObjectiveQuantities.jl
python/khronos/julia_src/src/Kernels/: Kernels.jl  ReferenceKernels.jl
python/khronos/julia_src/src/Monitors/: DiffractionMonitor.jl  Monitors.jl
python/khronos/julia_src/src/Sources/: Sources.jl  SpatialSources.jl  TimeSources.jl
python/khronos/meep/: __init__.py  _units.py  boundaries.py  constants.py  dft.py  geom.py  run_functions.py  simulation.py  source.py  visualization.py
python/khronos/meep/adjoint/: __init__.py  design_region.py  filters.py  objective.py  optimization_problem.py
python/khronos/tidy3d/: __init__.py  _bridge.py  boundary.py  constants.py  data.py  geometry.py  grid.py  medium.py  monitor.py  simulation.py  source.py  structure.py
python/khronos/web/: __init__.py
python/tests/: test_dispersion.py  test_meep_wrapper.py
(+124 files in other folders)
