[project]
name = "khronos"
version = "0.1.0"
description = "GPU-accelerated FDTD solver with tidy3d-compatible Python API"
requires-python = ">=3.9"
dependencies = [
    "juliacall>=0.9.20",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
